--- a/user-service.properties
+++ b/user-service.properties
@@ -1,7 +1,7 @@
 #Setting MySQL Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db
 spring.datasource.username=root
-spring.datasourece.password=
+spring.datasource.password=
 
 #Setting JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
